# log_analyzer

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  log_analyzer.py  pyproject.toml
.github/workflows/: ci-linters-tests.yml  linkers.yml
logs/: tests-nginx-access-ui.log-20240628
reports/: processed_logs.json  report-2024.12.11.html  report-2024.12.17.html
src/app/: get_last_log.py  log_handler.py  processed_logs.py
src/app/log_handler/: gzip.py  main.py  plain.py
src/app/log_parsing/: collect_stats.py  generate_report.py  parse_log_line.py
src/app/templates/: report.html
src/config/: config.json  config.py  config_example.json  load_config.py  merge_config.py
tests/src/app/log_handler/: test_data.py  test_main.py
tests/src/app/log_parsing/: test_parse_log_line.py
